Fixed spacing

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -28,7 +28,8 @@
   }
   h3 {
     padding: 0px;
-    margin-top: 15px;
+    padding-top: 20px;
+    margin-top: 10px;
     font-size: 14px;
     font-weight: bold;
     // color: #666665;
